Added UML diagrams into 'Design'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.application.name = Med
 server.port=7777
 
 #database
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5444/med_db
 #spring.datasource.url=jdbc:postgresql://localhost:5432/med_db
 spring.datasource.username=postgres
