Refactoring. First part

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5444/med_db
 #spring.datasource.url=jdbc:postgresql://localhost:5432/med_db
 spring.datasource.username=postgres
 spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #json serializer
 spring.mvc.converters.preferred-json-mapper=gson
