--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #json serializer
-spring.mvc.converters.preferred-json-mapper=gson
+#spring.mvc.converters.preferred-json-mapper=gson
